<resources>
    <string name="app_name">SAREGAMA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edugaon">Edugaon</string>
    <string name="world_of_music">World of music</string>

    <style name="curved">
        <item name="cornerSize">7%</item>
    </style>


    <style name="FastScrollerLabel">
        <item name="android:textSize">12sp</item>
        <item name="android:textColor">@android:color/white</item>
        <item name="android:textStyle">bold</item>
    </style>


    <style name="albumscornerSize">
        <item name="cornerSize">8%</item>
    </style>

    <style name="corner50">
        <item name="cornerSize">50%</item>
        <item name="iconSize">24dp</item>
    </style>

    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="music">MUSIC</string>
    <string name="loading">Loading...</string>
    <string name="semi_colon">/</string>
    <string name="luck">Lock Icon</string>
    <string name="back">Back Button</string>
    <string name="menu">Menu</string>
    <string name="repeat_button">Repeat Button</string>
    <string name="full_sereen">Full Screen</string>

    <string name="audio_track">Audio Track</string>
    <string name="subtitle">Subtitles</string>
    <string name="booster">Booster</string>
    <string name="speed">Speed</string>
    <string name="sleep_timer">sleep Timer</string>
    <string name="pip_mode">Pip Mode</string>
    <string name="shuffle">SHUFFLE</string>
    <string name="play">PLAY</string>
    <string name="musics_videos"><![CDATA[Musics & Videos]]></string>
    <string name="new_playlist">New Playlist</string>
    <string name="total_song">Total Song</string>
    <string name="folder_name">Folder name</string>
    <string name="theme">Theme</string>
    <string name="history">History</string>
    <string name="back_up">Back up</string>
    <string name="privacy">Privacy</string>
    <string name="file_transfer">File Transfer</string>
    <string name="dot">-</string>
    <string name="_00_00">00:00</string>
    <string name="now_player">Now Player</string>
    <string name="video">VIDEO</string>
    <string name="total_video">Total Video</string>
    <string name="to_play">TO play music or videos</string>
    <string name="about_per">Grant read access to media files to play your own music or videos</string>
    <string name="start">START</string>
    <string name="by_tapping">By tapping START, you agree to our <a href="https://www.larksuite.com/en_us/privacy-policy"> Privacy policy</a> and <a href="https://www.larksuite.com/user-terms-of-service"> Terms of service</a></string>
    <string name="name">Name</string>
    <string name="search_song">search song</string>
</resources>