<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:orientation="vertical"    android:layout_width="wrap_content"    android:layout_height="wrap_content"   >    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="horizontal">        <com.google.android.material.button.MaterialButton            android:id="@+id/audio_track"            android:layout_width="0dp"            android:layout_height="match_parent"            app:icon="@drawable/headphone_icon24"            android:text="@string/audio_track"            app:iconGravity="top"            android:background="?attr/selectableItemBackground"            android:clickable="true"            android:focusable="true"            android:textAllCaps="true"            android:layout_weight="1"            app:iconSize="24dp"            style="@style/Widget.AppCompat.Button.Borderless"            app:iconTint="@color/PayneGrey"            android:textColor="@color/PayneGrey"/>        <com.google.android.material.button.MaterialButton            android:id="@+id/subTitlesBtn"            android:layout_width="0dp"            android:layout_height="match_parent"            app:icon="@drawable/subtitles_ic_icon"            android:text="@string/subtitle"            app:iconGravity="top"            app:iconSize="26dp"            android:background="?attr/selectableItemBackground"            android:clickable="true"            android:focusable="true"            android:textAllCaps="true"            android:layout_weight="1"            style="@style/Widget.AppCompat.Button.Borderless"            app:iconTint="@color/PayneGrey"            android:textColor="@color/PayneGrey"/>        <com.google.android.material.button.MaterialButton            android:id="@+id/audio_booster"            android:layout_width="0dp"            android:layout_height="match_parent"            app:icon="@drawable/speaker24"            android:text="@string/booster"            app:iconGravity="top"            android:background="?attr/selectableItemBackground"            android:clickable="true"            android:focusable="true"            android:textAllCaps="true"            android:layout_weight="1"            app:iconSize="25dp"            style="@style/Widget.AppCompat.Button.Borderless"            app:iconTint="@color/PayneGrey"            android:textColor="@color/PayneGrey"/>    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="horizontal">        <com.google.android.material.button.MaterialButton            android:id="@+id/speedBtn"            android:layout_width="0dp"            android:layout_height="match_parent"            app:icon="@drawable/speed_test24"            android:text="@string/speed"            app:iconGravity="top"            android:background="?attr/selectableItemBackground"            android:clickable="true"            android:focusable="true"            android:textAllCaps="true"            android:layout_weight="1"            app:iconSize="24dp"            style="@style/Widget.AppCompat.Button.Borderless"            app:iconTint="@color/PayneGrey"            android:textColor="@color/PayneGrey"/>        <com.google.android.material.button.MaterialButton            android:id="@+id/sleepTimer"            android:layout_width="0dp"            android:layout_height="match_parent"            app:icon="@drawable/access_alarm_24"            android:text="@string/sleep_timer"            app:iconGravity="top"            app:iconSize="26dp"            android:background="?attr/selectableItemBackground"            android:clickable="true"            android:focusable="true"            android:textAllCaps="true"            android:layout_weight="1"            style="@style/Widget.AppCompat.Button.Borderless"            app:iconTint="@color/PayneGrey"            android:textColor="@color/PayneGrey"/>        <com.google.android.material.button.MaterialButton            android:id="@+id/pipModeBtn"            android:layout_width="0dp"            android:layout_height="match_parent"            app:icon="@drawable/picture_in_2_fill_icon24"            android:text="@string/pip_mode"            app:iconGravity="top"            android:background="?attr/selectableItemBackground"            android:clickable="true"            android:focusable="true"            android:textAllCaps="true"            android:layout_weight="1"            app:iconSize="25dp"            style="@style/Widget.AppCompat.Button.Borderless"            app:iconTint="@color/PayneGrey"            android:textColor="@color/PayneGrey"/>    </LinearLayout></LinearLayout>