<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Permission_Activity_Frist">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/img_2"
        android:layout_marginTop="-80dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/permission_btd"
        >

        <ImageView
            android:id="@+id/appIcon_per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="200dp"
            android:src="@drawable/streamio" />
        <TextView
            android:id="@+id/title_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_play"
            android:layout_below="@+id/appIcon_per"
            android:gravity="center"
            android:textSize="18sp"
            android:fontFamily="@font/nosifer"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_per"
            android:layout_below="@+id/title_icon"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/PayneGrey"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_Btn_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="80dp"
            android:layout_marginHorizontal="20dp"
            android:background="#3949AB"
            android:text="@string/start"
            android:textSize="18sp"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/service_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_tapping"
            android:textColor="@color/PayneGrey"
            android:textSize="14sp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:layout_marginBottom="20dp"
           />


    </RelativeLayout>




</RelativeLayout>