<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".VideoPlayerActivity">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/player_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:controller_layout_id="@layout/custom_control_view" />

    <LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn_player"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/ripple_effect"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            app:tint="@color/PayneGrey" />

        <TextView
            android:id="@+id/video_title_Marquee"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="videoName"
            android:fontFamily="@font/alice"
            android:textColor="@color/PayneGrey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/moreFeaturesBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="50dp"
            android:background="@drawable/ripple_effect"
            android:contentDescription="@string/menu"
            android:src="@drawable/menu_video1"
            app:tint="@color/PayneGrey" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/screenLockBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/ripple_effect"
        android:contentDescription="@string/luck"
        android:src="@drawable/device_unlock_icon_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/corner50"
        app:tint="@color/PayneGrey" />













    <RelativeLayout
        android:id="@+id/bottomController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:gravity="end|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/playPauseBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/luck"
            android:focusable="true"
            android:src="@drawable/icons8_play_24"
            app:tint="@color/PayneGrey"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <ImageButton
            android:id="@+id/repeatBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ripple_effect"
            android:contentDescription="@string/repeat_button"
            android:src="@drawable/repeat_fill_icon_24"
            app:tint="@color/PayneGrey"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="60dp"
            android:layout_alignEnd="@id/prevBtn"
            android:layout_marginHorizontal="10dp"/>

        <ImageButton
            android:id="@+id/prevBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/ripple_effect"
            android:contentDescription="@string/repeat_button"
            android:src="@drawable/previous_16"
            android:layout_marginEnd="60dp"
            android:layout_alignEnd="@id/nextBtn"
            app:tint="@color/PayneGrey" />

        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ripple_effect"
            android:contentDescription="@string/repeat_button"
            android:src="@drawable/next_16"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="60dp"
           android:layout_alignEnd="@id/fullscreenBtn"
            app:tint="@color/PayneGrey" />

        <ImageButton
            android:id="@+id/fullscreenBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:layout_alignParentEnd="true"
            android:focusable="true"
            android:contentDescription="@string/full_sereen"
            android:src="@drawable/full_screen_button_sl"
            android:background="@drawable/ripple_effect"
            android:layout_marginEnd="10dp"
            app:tint="@color/PayneGrey" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>